Fix security issue with Django
Specify a specific version of Django, because for some reason we didn't before.

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 celery = "*"
-django = "*"
+django = ">=3.1.6"
 django-filter = "*"
 django-grappelli = "*"
 djangorestframework = "*"
